force-app/main/default/objects/View_Tracking__c/View_Tracking__c.object-meta.xml
<CustomObject>
    <description
  >Tracks product views by community users for analytics and recently viewed functionality. Records when a user views a specific product to enable personalized product recommendations and recently viewed product displays in the StoreConnect e-commerce platform.</description>
    <label>View Tracking</label>
    <nameField>
        <displayFormat>VT-{0000000}</displayFormat>
        <label>View Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>View Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>