force-app/main/default/objects/View_Tracking__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>View Tracking</relationshipLabel>
    <relationshipName>View_Tracking</relationshipName>

    <type>Lookup</type>
</CustomField>