force-app/main/default/objects/View_Tracking__c/fields/User_Contact__c.field-meta.xml
<CustomField>
    <fullName>User_Contact__c</fullName>
    <label>User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>View Tracking</relationshipLabel>
    <relationshipName>View_Tracking</relationshipName>

    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>